<resources>
    <string name="app_name">LiverpoolSearch</string>
    <string name="search">Buscar</string>
    <string name="welcome_user">¡Bienvenida Lesly!</string>
    <string name="what_are_you_doing">Todo lo que busques sobre Liverpool, lo encontrarás.</string>
    <string name="no_information">Sin resultados de búsqueda</string>
    <string name="name_product_dummie">Computadora</string>
    <string name="loc_dummie">Arancel 47</string>
    <string name="price_dummie">$40.00</string>
</resources>